# mcp-universalec-e-invoice

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-TW.md  app.py  mcp_server.py  pyproject.toml
.github/workflows/: publish.yml
config/: settings.py
connectors/: einvoice_client.py
docs/superpowers/plans/: 2026-04-01-universalec-einvoice-mcp.md
docs/superpowers/specs/: 2026-04-01-universalec-einvoice-mcp-design.md
tests/: conftest.py  test_admin_tools.py  test_allowance_tools.py  test_b2b_invoice_tools.py  test_b2c_invoice_tools.py  test_cancel_tools.py  test_einvoice_client.py  test_invoice_number_tools.py  test_query_tools.py  test_regression.py  test_system_tools.py
tools/: admin_tools.py  allowance_tools.py  b2b_invoice_tools.py  b2c_invoice_tools.py  cancel_tools.py  invoice_number_tools.py  query_tools.py  system_tools.py
