[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-universalec-e-invoice"
version = "0.1.0"
description = "MCP Server for Universal EC E-Invoice — Taiwan e-invoice POS Web Service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Asgard AI Platform", email = "dev@asgard.ai"},
]

dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
mcp-universalec-e-invoice = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server", "app"]

[tool.setuptools.packages.find]
include = ["config*", "connectors*", "tools*"]
